--- a/themes/ds-offshorehub-theme/partials/sidebar.htm
+++ b/themes/ds-offshorehub-theme/partials/sidebar.htm
@@ -9,7 +9,7 @@ categoryPage = "blog/category"
 postPage = "blog/post"
 
 [fanpageFacebook]
-nameFanFace = "nhatban101"
+nameFanFace = "offshorehub"
 
 [searchInput]
 useAutoComplete = 0
