--- a/themes/ds-offshorehub-theme/partials/header.htm
+++ b/themes/ds-offshorehub-theme/partials/header.htm
@@ -45,7 +45,7 @@ searchPage = "search.htm"
             <div class="row">
                 <div class="col-md-3">
                     <a id="site-logo" href="/">
-                        <img src="{{ 'assets/images/logo.png'|theme }}" alt="Travel Viet Nam" />
+                        <img src="{{ 'assets/images/logo.png'|theme }}" alt="Vietnam offshore software development service - ベトナムオフショアソフトウェア開発サービス" />
                     </a>
                 </div>
                 <div class="col-md-9">
