--- a/themes/ds-offshorehub-theme/partials/header.htm
+++ b/themes/ds-offshorehub-theme/partials/header.htm
@@ -43,12 +43,12 @@ searchPage = "search.htm"
     <div id="main-header">
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-sx-6 col-md-4">
                     <a id="site-logo" href="/">
                         <img src="{{ 'assets/images/logo-01-90H.png'|theme }}" alt="Vietnam offshore software development service - ベトナムオフショアソフトウェア開発サービス" />
                     </a>
                 </div>
-                <div class="col-md-8">
+                <div class="col-sx-6 col-md-8">
                     <nav class="main-nav">
                         <span><i class="fa fa-bars" aria-hidden="true"></i></span>
                         
