--- a/themes/ds-offshorehub-theme/partials/header.htm
+++ b/themes/ds-offshorehub-theme/partials/header.htm
@@ -17,7 +17,7 @@ searchPage = "search.htm"
             <div class="row top-row">
                 <div class="col-md-6">
                     <div class="left-part alignleft">
-                        <span class="contact-email small">info@devsamurai.com</span>
+                        <span class="contact-email small">info@offshorehub.jp</span>
                         
                     </div>
                 </div>
