--- a/themes/ds-offshorehub-theme/partials/footer.htm
+++ b/themes/ds-offshorehub-theme/partials/footer.htm
@@ -32,7 +32,7 @@
                          <span class="">&copy; 2018 https://www.offshorehub.jp All Rights Reserved.</span>
                     </div>
                     <div class="foot-box col-md-6 col-sm-6">
-                        <span class="contact-email">info@devsamurai.com</span>
+                        <span class="contact-email">info@offshorehub.jp</span>
                     </div>
                 </div>
             </div>
