--- a/themes/ds-offshorehub-theme/partials/header.htm
+++ b/themes/ds-offshorehub-theme/partials/header.htm
@@ -17,8 +17,8 @@ searchPage = "search.htm"
             <div class="row top-row">
                 <div class="col-md-6">
                     <div class="left-part alignleft">
-                        <span class="contact-email small">info@offshorehub.jp</span>
-                        
+                        <span class="contact-email small"><a href="mailto:info@offshorehub.jp">info@offshorehub.jp</a></span>
+                        <span class="contact-phone small">電話でお問い合わせはこちらまで <span style="color: red; font-weight: bold;">03-5926-4420</span></span>
                     </div>
                 </div>
                 <div class="col-md-6">
