--- a/themes/ds-offshorehub-theme/partials/footer.htm
+++ b/themes/ds-offshorehub-theme/partials/footer.htm
@@ -1,28 +1,28 @@
 [viewBag]
 ==
 <!-- START #ex-footer -->
-<div id="#ex-footer">
+<div id="#ex-footer" class="darkbluebg">
         <div class="container">
             <div class="row">
                 <nav class="col-md-12">
                     <ul class="footer-menu">
                         <li>
-                            <a href="#">ホーム</a>
+                            <a href="/">ホーム</a>
                         </li>
                         <li>
-                            <a href="#">サービス</a>
+                            <a href="/services">サービス</a>
                         </li>
                         <li>
-                            <a href="#">企業一覧</a>
+                            <a href="/category/companies">企業一覧</a>
                         </li>
                         <li>
-                            <a href="#">オフショア開発記事</a>
+                            <a href="/category/blogs">オフショア開発記事</a>
                         </li>
                         <li>
-                            <a href="#">問い合わせ</a>
+                            <a href="/contact">問い合わせ</a>
                         </li>
                         <li class="last-item">
-                            <a href="#">運用会社</a>
+                            <a href="/about-us">運用会社</a>
                         </li>
                     </ul>
                 </nav>
