--- a/themes/ds-offshorehub-theme/partials/footer.htm
+++ b/themes/ds-offshorehub-theme/partials/footer.htm
@@ -1,7 +1,7 @@
 [viewBag]
 ==
 <!-- START #ex-footer -->
-<div id="#ex-footer" class="darkbluebg">
+<div id="ex-footer" class="darkbluebg">
         <div class="container">
             <div class="row">
                 <nav class="col-md-12">
@@ -26,14 +26,10 @@
                         </li>
                     </ul>
                 </nav>
-
-                <div class="foot-boxs">
-                    <div class="foot-box col-md-6 col-sm-6 text-right">
-                         <span class="">&copy; 2018 https://www.offshorehub.jp All Rights Reserved.</span>
-                    </div>
-                    <div class="foot-box col-md-6 col-sm-6">
-                        <span class="contact-email">info@offshorehub.jp</span>
-                    </div>
+            </div>
+            <div class="row foot-box">
+                <div class=" col-md-12 col-sm-12 text-center">
+                     <span class="">&copy; 2018 OffshoreHub All Rights Reserved.</span>
                 </div>
             </div>
         </div>
